src/GraphQLParser/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from src/GraphQLParser/Grammar.y
-----------------------------------------------------------------------------


rule 4 is unused
rule 5 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseGraphQLDocument -> graphqlDocument     (0)
	%start_parseName -> name                           (1)
	graphqlDocument -> graphqlDefinition               (2)
	graphqlDocument -> graphqlDefinition graphqlDocument   (3)
	executableOrTypeSystemDefiniton -> executableDefinition   (4)
	executableOrTypeSystemDefiniton -> typeSystemDefinition   (5)
	graphqlDefinition -> typeSystemDefinition          (6)
	graphqlDefinition -> executableDefinition          (7)
	typeSystemDefinition -> schemaDefinition           (8)
	typeSystemDefinition -> typeDefinition             (9)
	typeSystemDefinition -> directiveDefinition        (10)
	schemaDefinition -> description 'schema' directives '{' rootOperationTypesDefinition '}'   (11)
	rootOperationTypesDefinition -> rootOperationTypesDefinition_   (12)
	rootOperationTypesDefinition_ -> rootOperationTypeDefinition   (13)
	rootOperationTypesDefinition_ -> rootOperationTypeDefinition rootOperationTypesDefinition_   (14)
	rootOperationTypeDefinition -> operationType ':' name   (15)
	typeDefinition -> scalarTypeDefinition             (16)
	typeDefinition -> objectTypeDefinition             (17)
	typeDefinition -> interfaceTypeDefinition          (18)
	typeDefinition -> unionTypeDefinition              (19)
	typeDefinition -> enumTypeDefinition               (20)
	typeDefinition -> inputObjectTypeDefinition        (21)
	scalarTypeDefinition -> description 'scalar' name directives   (22)
	objectTypeDefinition -> description 'type' name implementsInterfaces directives fieldsDefinition   (23)
	interfaceTypeDefinition -> description 'interface' name implementsInterfaces directives fieldsDefinition   (24)
	implementsInterfaces -> implementsInterfaces_      (25)
	implementsInterfaces ->                            (26)
	implementsInterfaces_ -> implementsInterfaces_ '&' name   (27)
	implementsInterfaces_ -> 'implements' '&' name     (28)
	implementsInterfaces_ -> 'implements' name         (29)
	fieldsDefinition -> '{' fieldDefinitions '}'       (30)
	fieldsDefinition ->                                (31)
	fieldDefinitions -> fieldDefinition                (32)
	fieldDefinitions -> fieldDefinition fieldDefinitions   (33)
	fieldDefinition -> description name argumentsDefinition ':' type directives   (34)
	unionTypeDefinition -> description 'union' name directives '=' unionMembers   (35)
	unionTypeDefinition -> description 'union' name directives '=' '|' unionMembers   (36)
	unionMembers -> name                               (37)
	unionMembers -> name '|' unionMembers              (38)
	enumTypeDefinition -> description 'enum' name directives '{' enumValuesDefinition '}'   (39)
	enumValuesDefinition -> enumValueDefinition        (40)
	enumValuesDefinition -> enumValueDefinition enumValuesDefinition   (41)
	enumValueDefinition -> description name directives   (42)
	inputObjectTypeDefinition -> description 'input' name directives inputFieldsDefinition   (43)
	directiveDefinition -> description 'directive' '@' dir argumentsDefinition optRepeatable 'on' directiveLocations   (44)
	directiveDefinition -> description 'directive' '@' dir argumentsDefinition optRepeatable 'on' '|' directiveLocations   (45)
	directiveLocations -> directiveLocation            (46)
	directiveLocations -> directiveLocation '|' directiveLocations   (47)
	directiveLocation -> executableDirectiveLocation   (48)
	directiveLocation -> typeSystemDirectiveLocation   (49)
	executableDirectiveLocation -> 'QUERY'             (50)
	executableDirectiveLocation -> 'MUTATION'          (51)
	executableDirectiveLocation -> 'SUBSCRIPTION'      (52)
	executableDirectiveLocation -> 'FIELD'             (53)
	executableDirectiveLocation -> 'FRAGMENT_DEFINITION'   (54)
	executableDirectiveLocation -> 'FRAGMENT_SPREAD'   (55)
	executableDirectiveLocation -> 'INLINE_FRAGMENT'   (56)
	executableDirectiveLocation -> 'VARIABLE_DEFINITION'   (57)
	typeSystemDirectiveLocation -> 'SCHEMA'            (58)
	typeSystemDirectiveLocation -> 'SCALAR'            (59)
	typeSystemDirectiveLocation -> 'OBJECT'            (60)
	typeSystemDirectiveLocation -> 'FIELD_DEFINITION'   (61)
	typeSystemDirectiveLocation -> 'ARGUMENT_DEFINITION'   (62)
	typeSystemDirectiveLocation -> 'INTERFACE'         (63)
	typeSystemDirectiveLocation -> 'UNION'             (64)
	typeSystemDirectiveLocation -> 'ENUM'              (65)
	typeSystemDirectiveLocation -> 'ENUM_VALUE'        (66)
	typeSystemDirectiveLocation -> 'INPUT_OBJECT'      (67)
	typeSystemDirectiveLocation -> 'INPUT_FIELD_DEFINITION'   (68)
	inputFieldsDefinition -> '{' inputValuesDefinition '}'   (69)
	inputFieldsDefinition ->                           (70)
	argumentsDefinition -> '(' inputValuesDefinition ')'   (71)
	argumentsDefinition ->                             (72)
	inputValuesDefinition -> inputValueDefinition      (73)
	inputValuesDefinition -> inputValueDefinition inputValuesDefinition   (74)
	inputValueDefinition -> description name ':' type optValue directives   (75)
	executableDefinition -> typedOperationDefinition   (76)
	executableDefinition -> selectionSet               (77)
	executableDefinition -> fragmentDefinition         (78)
	typedOperationDefinition -> operationType directives selectionSet   (79)
	typedOperationDefinition -> operationType name directives selectionSet   (80)
	typedOperationDefinition -> operationType variableDefinitions directives selectionSet   (81)
	typedOperationDefinition -> operationType name variableDefinitions directives selectionSet   (82)
	fragmentDefinition -> 'fragment' name typeCondition directives selectionSet   (83)
	fragmentSpread -> '...' name directives            (84)
	inlineFragment -> '...' typeCondition directives selectionSet   (85)
	inlineFragment -> '...' directives selectionSet    (86)
	field -> aliasAndName directives                   (87)
	field -> aliasAndName arguments directives         (88)
	field -> aliasAndName arguments directives selectionSet   (89)
	field -> aliasAndName directives selectionSet      (90)
	selectionSet -> '{' selections '}'                 (91)
	selections -> selection                            (92)
	selections -> selection selections                 (93)
	selection -> field                                 (94)
	selection -> fragmentSpread                        (95)
	selection -> inlineFragment                        (96)
	optValue -> valueConst                             (97)
	optValue ->                                        (98)
	values -> value                                    (99)
	values -> value values                             (100)
	value -> valueConst                                (101)
	value -> variable                                  (102)
	valueConst -> 'null'                               (103)
	valueConst -> stringValue                          (104)
	valueConst -> float                                (105)
	valueConst -> int                                  (106)
	valueConst -> bool                                 (107)
	valueConst -> vlist                                (108)
	valueConst -> vobject                              (109)
	variable -> '$' ident                              (110)
	stringValue -> '"' '"'                             (111)
	stringValue -> '"' string '"'                      (112)
	stringValue -> '"""' blockString '"""'             (113)
	vlist -> '[' ']'                                   (114)
	vlist -> '[' values ']'                            (115)
	vobject -> '{' '}'                                 (116)
	vobject -> '{' object '}'                          (117)
	object -> objectField                              (118)
	object -> objectField object                       (119)
	objectField -> name ':' value                      (120)
	operationType -> 'query'                           (121)
	operationType -> 'mutation'                        (122)
	operationType -> 'subscription'                    (123)
	aliasAndName -> name ':' name                      (124)
	aliasAndName -> name                               (125)
	name -> ident                                      (126)
	arguments -> '(' arguments_ ')'                    (127)
	arguments_ -> argument                             (128)
	arguments_ -> arguments_ argument                  (129)
	argument -> name ':' value                         (130)
	argument -> '$' name ':' value                     (131)
	variableDefinitions -> '(' variableDefinitions_ ')'   (132)
	variableDefinitions_ -> variableDefinition         (133)
	variableDefinitions_ -> variableDefinition variableDefinitions_   (134)
	variableDefinition -> variable ':' type optValue directives   (135)
	typeCondition -> 'on' name                         (136)
	type -> name                                       (137)
	type -> type '!'                                   (138)
	type -> '[' type ']'                               (139)
	directives -> directives_                          (140)
	directives ->                                      (141)
	directives_ -> directive                           (142)
	directives_ -> directive directives_               (143)
	directive -> '@' dir                               (144)
	directive -> '@' dir arguments                     (145)
	description -> stringValue                         (146)
	description ->                                     (147)
	optRepeatable -> 'repeatable'                      (148)
	optRepeatable ->                                   (149)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'directive'    { TokIdentifier (Loc $$ "directive") }
	'enum'         { TokIdentifier (Loc $$ "enum") }
	'fragment'     { TokIdentifier (Loc $$ "fragment") }
	'implements'   { TokIdentifier (Loc $$ "implements") }
	'interface'    { TokIdentifier (Loc $$ "interface") }
	'input'        { TokIdentifier (Loc $$ "input") }
	'query'        { TokIdentifier (Loc $$ "query") }
	'mutation'     { TokIdentifier (Loc $$ "mutation") }
	'null'         { TokIdentifier (Loc $$ "null") }
	'on'           { TokIdentifier (Loc $$ "on") }
	'repeatable'   { TokIdentifier (Loc $$ "repeatable") }
	'scalar'       { TokIdentifier (Loc $$ "scalar") }
	'schema'       { TokIdentifier (Loc $$ "schema") }
	'subscription' { TokIdentifier (Loc $$ "subscription") }
	'type'         { TokIdentifier (Loc $$ "type") }
	'union'        { TokIdentifier (Loc $$ "union") }
	'QUERY'        { TokIdentifier (Loc $$ "QUERY") }
	'MUTATION'     { TokIdentifier (Loc $$ "MUTATION") }
	'SUBSCRIPTION' { TokIdentifier (Loc $$ "SUBSCRIPTION") }
	'FIELD'        { TokIdentifier (Loc $$ "FIELD") }
	'FRAGMENT_DEFINITION'{ TokIdentifier (Loc $$ "FRAGMENT_DEFINITION") }
	'FRAGMENT_SPREAD'{ TokIdentifier (Loc $$ "FRAGMENT_SPREAD") }
	'INLINE_FRAGMENT'{ TokIdentifier (Loc $$ "INLINE_FRAGMENT") }
	'VARIABLE_DEFINITION'{ TokIdentifier (Loc $$ "VARIABLE_DEFINITION") }
	'SCHEMA'       { TokIdentifier (Loc $$ "SCHEMA") }
	'SCALAR'       { TokIdentifier (Loc $$ "SCALAR") }
	'OBJECT'       { TokIdentifier (Loc $$ "OBJECT") }
	'FIELD_DEFINITION'{ TokIdentifier (Loc $$ "FIELD_DEFINITION") }
	'ARGUMENT_DEFINITION'{ TokIdentifier (Loc $$ "ARGUMENT_DEFINITION") }
	'INTERFACE'    { TokIdentifier (Loc $$ "INTERFACE") }
	'UNION'        { TokIdentifier (Loc $$ "UNION") }
	'ENUM'         { TokIdentifier (Loc $$ "ENUM") }
	'ENUM_VALUE'   { TokIdentifier (Loc $$ "ENUM_VALUE") }
	'INPUT_OBJECT' { TokIdentifier (Loc $$ "INPUT_OBJECT") }
	'INPUT_FIELD_DEFINITION'{ TokIdentifier (Loc $$ "INPUT_FIELD_DEFINITION") }
	'@'            { TokSymbol (Loc $$ SymAt) }
	'$'            { TokSymbol (Loc $$ SymBling) }
	'&'            { TokSymbol (Loc $$ SymAmpersand) }
	'!'            { TokSymbol (Loc $$ SymBang) }
	'"'            { TokSymbol (Loc $$ SymDoubleQuote) }
	':'            { TokSymbol (Loc $$ SymColon) }
	'='            { TokSymbol (Loc $$ SymEq) }
	'|'            { TokSymbol (Loc $$ SymPipe) }
	'{'            { TokSymbol (Loc $$ SymCurlyOpen) }
	'}'            { TokSymbol (Loc $$ SymCurlyClose) }
	'['            { TokSymbol (Loc $$ SymSquareOpen) }
	']'            { TokSymbol (Loc $$ SymSquareClose) }
	'('            { TokSymbol (Loc $$ SymParenOpen) }
	')'            { TokSymbol (Loc $$ SymParenClose) }
	'...'          { TokSymbol (Loc $$ SymSpread) }
	'"""'          { TokSymbol (Loc $$ SymBlockQuote) }
	int            { TokIntLit $$ }
	float          { TokNumLit _ $$ }
	bool           { TokBoolLit $$ }
	blockString    { TokStringBlock $$ }
	string         { TokStringLit $$ }
	ident          { TokIdentifier $$ }
	dir            { TokDirective $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseGraphQLDocument rule  0
	%start_parseName rule  1
	graphqlDocument rules 2, 3
	executableOrTypeSystemDefiniton rules 4, 5
	graphqlDefinition rules 6, 7
	typeSystemDefinition rules 8, 9, 10
	schemaDefinition rule  11
	rootOperationTypesDefinition rule  12
	rootOperationTypesDefinition_ rules 13, 14
	rootOperationTypeDefinition rule  15
	typeDefinition  rules 16, 17, 18, 19, 20, 21
	scalarTypeDefinition rule  22
	objectTypeDefinition rule  23
	interfaceTypeDefinition rule  24
	implementsInterfaces rules 25, 26
	implementsInterfaces_ rules 27, 28, 29
	fieldsDefinition rules 30, 31
	fieldDefinitions rules 32, 33
	fieldDefinition rule  34
	unionTypeDefinition rules 35, 36
	unionMembers    rules 37, 38
	enumTypeDefinition rule  39
	enumValuesDefinition rules 40, 41
	enumValueDefinition rule  42
	inputObjectTypeDefinition rule  43
	directiveDefinition rules 44, 45
	directiveLocations rules 46, 47
	directiveLocation rules 48, 49
	executableDirectiveLocation rules 50, 51, 52, 53, 54, 55, 56, 57
	typeSystemDirectiveLocation rules 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68
	inputFieldsDefinition rules 69, 70
	argumentsDefinition rules 71, 72
	inputValuesDefinition rules 73, 74
	inputValueDefinition rule  75
	executableDefinition rules 76, 77, 78
	typedOperationDefinition rules 79, 80, 81, 82
	fragmentDefinition rule  83
	fragmentSpread  rule  84
	inlineFragment  rules 85, 86
	field           rules 87, 88, 89, 90
	selectionSet    rule  91
	selections      rules 92, 93
	selection       rules 94, 95, 96
	optValue        rules 97, 98
	values          rules 99, 100
	value           rules 101, 102
	valueConst      rules 103, 104, 105, 106, 107, 108, 109
	variable        rule  110
	stringValue     rules 111, 112, 113
	vlist           rules 114, 115
	vobject         rules 116, 117
	object          rules 118, 119
	objectField     rule  120
	operationType   rules 121, 122, 123
	aliasAndName    rules 124, 125
	name            rule  126
	arguments       rule  127
	arguments_      rules 128, 129
	argument        rules 130, 131
	variableDefinitions rule  132
	variableDefinitions_ rules 133, 134
	variableDefinition rule  135
	typeCondition   rule  136
	type            rules 137, 138, 139
	directives      rules 140, 141
	directives_     rules 142, 143
	directive       rules 144, 145
	description     rules 146, 147
	optRepeatable   rules 148, 149

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseGraphQLDocument -> . graphqlDocument    (rule 0)

	'directive'    reduce using rule 147
	'enum'         reduce using rule 147
	'fragment'     shift, and enter state 21
	'interface'    reduce using rule 147
	'input'        reduce using rule 147
	'query'        shift, and enter state 22
	'mutation'     shift, and enter state 23
	'scalar'       reduce using rule 147
	'schema'       reduce using rule 147
	'subscription' shift, and enter state 24
	'type'         reduce using rule 147
	'union'        reduce using rule 147
	'"'            shift, and enter state 25
	'{'            shift, and enter state 26
	'"""'          shift, and enter state 27

	graphqlDocumentgoto state 30
	graphqlDefinitiongoto state 31
	typeSystemDefinitiongoto state 4
	schemaDefinitiongoto state 5
	typeDefinition goto state 6
	scalarTypeDefinitiongoto state 7
	objectTypeDefinitiongoto state 8
	interfaceTypeDefinitiongoto state 9
	unionTypeDefinitiongoto state 10
	enumTypeDefinitiongoto state 11
	inputObjectTypeDefinitiongoto state 12
	directiveDefinitiongoto state 13
	executableDefinitiongoto state 14
	typedOperationDefinitiongoto state 15
	fragmentDefinitiongoto state 16
	selectionSet   goto state 17
	stringValue    goto state 18
	operationType  goto state 19
	description    goto state 20

State 1

	%start_parseName -> . name                          (rule 1)

	ident          shift, and enter state 29

	name           goto state 28

State 2

	graphqlDocument -> . graphqlDefinition              (rule 2)

	'fragment'     shift, and enter state 21
	'query'        shift, and enter state 22
	'mutation'     shift, and enter state 23
	'subscription' shift, and enter state 24
	'"'            shift, and enter state 25
	'{'            shift, and enter state 26
	'"""'          shift, and enter state 27

	graphqlDefinitiongoto state 3
	typeSystemDefinitiongoto state 4
	schemaDefinitiongoto state 5
	typeDefinition goto state 6
	scalarTypeDefinitiongoto state 7
	objectTypeDefinitiongoto state 8
	interfaceTypeDefinitiongoto state 9
	unionTypeDefinitiongoto state 10
	enumTypeDefinitiongoto state 11
	inputObjectTypeDefinitiongoto state 12
	directiveDefinitiongoto state 13
	executableDefinitiongoto state 14
	typedOperationDefinitiongoto state 15
	fragmentDefinitiongoto state 16
	selectionSet   goto state 17
	stringValue    goto state 18
	operationType  goto state 19
	description    goto state 20

State 3

	graphqlDocument -> graphqlDefinition .              (rule 2)



State 4

	graphqlDefinition -> typeSystemDefinition .         (rule 6)

	'directive'    reduce using rule 6
	'enum'         reduce using rule 6
	'fragment'     reduce using rule 6
	'interface'    reduce using rule 6
	'input'        reduce using rule 6
	'query'        reduce using rule 6
	'mutation'     reduce using rule 6
	'scalar'       reduce using rule 6
	'schema'       reduce using rule 6
	'subscription' reduce using rule 6
	'type'         reduce using rule 6
	'union'        reduce using rule 6
	'"'            reduce using rule 6
	'{'            reduce using rule 6
	'"""'          reduce using rule 6
	%eof           reduce using rule 6


State 5

	typeSystemDefinition -> schemaDefinition .          (rule 8)

	'directive'    reduce using rule 8
	'enum'         reduce using rule 8
	'fragment'     reduce using rule 8
	'interface'    reduce using rule 8
	'input'        reduce using rule 8
	'query'        reduce using rule 8
	'mutation'     reduce using rule 8
	'scalar'       reduce using rule 8
	'schema'       reduce using rule 8
	'subscription' reduce using rule 8
	'type'         reduce using rule 8
	'union'        reduce using rule 8
	'"'            reduce using rule 8
	'{'            reduce using rule 8
	'"""'          reduce using rule 8
	%eof           reduce using rule 8


State 6

	typeSystemDefinition -> typeDefinition .            (rule 9)

	'directive'    reduce using rule 9
	'enum'         reduce using rule 9
	'fragment'     reduce using rule 9
	'interface'    reduce using rule 9
	'input'        reduce using rule 9
	'query'        reduce using rule 9
	'mutation'     reduce using rule 9
	'scalar'       reduce using rule 9
	'schema'       reduce using rule 9
	'subscription' reduce using rule 9
	'type'         reduce using rule 9
	'union'        reduce using rule 9
	'"'            reduce using rule 9
	'{'            reduce using rule 9
	'"""'          reduce using rule 9
	%eof           reduce using rule 9


State 7

	typeDefinition -> scalarTypeDefinition .            (rule 16)

	'directive'    reduce using rule 16
	'enum'         reduce using rule 16
	'fragment'     reduce using rule 16
	'interface'    reduce using rule 16
	'input'        reduce using rule 16
	'query'        reduce using rule 16
	'mutation'     reduce using rule 16
	'scalar'       reduce using rule 16
	'schema'       reduce using rule 16
	'subscription' reduce using rule 16
	'type'         reduce using rule 16
	'union'        reduce using rule 16
	'"'            reduce using rule 16
	'{'            reduce using rule 16
	'"""'          reduce using rule 16
	%eof           reduce using rule 16


State 8

	typeDefinition -> objectTypeDefinition .            (rule 17)

	'directive'    reduce using rule 17
	'enum'         reduce using rule 17
	'fragment'     reduce using rule 17
	'interface'    reduce using rule 17
	'input'        reduce using rule 17
	'query'        reduce using rule 17
	'mutation'     reduce using rule 17
	'scalar'       reduce using rule 17
	'schema'       reduce using rule 17
	'subscription' reduce using rule 17
	'type'         reduce using rule 17
	'union'        reduce using rule 17
	'"'            reduce using rule 17
	'{'            reduce using rule 17
	'"""'          reduce using rule 17
	%eof           reduce using rule 17


State 9

	typeDefinition -> interfaceTypeDefinition .         (rule 18)

	'directive'    reduce using rule 18
	'enum'         reduce using rule 18
	'fragment'     reduce using rule 18
	'interface'    reduce using rule 18
	'input'        reduce using rule 18
	'query'        reduce using rule 18
	'mutation'     reduce using rule 18
	'scalar'       reduce using rule 18
	'schema'       reduce using rule 18
	'subscription' reduce using rule 18
	'type'         reduce using rule 18
	'union'        reduce using rule 18
	'"'            reduce using rule 18
	'{'            reduce using rule 18
	'"""'          reduce using rule 18
	%eof           reduce using rule 18


State 10

	typeDefinition -> unionTypeDefinition .             (rule 19)

	'directive'    reduce using rule 19
	'enum'         reduce using rule 19
	'fragment'     reduce using rule 19
	'interface'    reduce using rule 19
	'input'        reduce using rule 19
	'query'        reduce using rule 19
	'mutation'     reduce using rule 19
	'scalar'       reduce using rule 19
	'schema'       reduce using rule 19
	'subscription' reduce using rule 19
	'type'         reduce using rule 19
	'union'        reduce using rule 19
	'"'            reduce using rule 19
	'{'            reduce using rule 19
	'"""'          reduce using rule 19
	%eof           reduce using rule 19


State 11

	typeDefinition -> enumTypeDefinition .              (rule 20)

	'directive'    reduce using rule 20
	'enum'         reduce using rule 20
	'fragment'     reduce using rule 20
	'interface'    reduce using rule 20
	'input'        reduce using rule 20
	'query'        reduce using rule 20
	'mutation'     reduce using rule 20
	'scalar'       reduce using rule 20
	'schema'       reduce using rule 20
	'subscription' reduce using rule 20
	'type'         reduce using rule 20
	'union'        reduce using rule 20
	'"'            reduce using rule 20
	'{'            reduce using rule 20
	'"""'          reduce using rule 20
	%eof           reduce using rule 20


State 12

	typeDefinition -> inputObjectTypeDefinition .       (rule 21)

	'directive'    reduce using rule 21
	'enum'         reduce using rule 21
	'fragment'     reduce using rule 21
	'interface'    reduce using rule 21
	'input'        reduce using rule 21
	'query'        reduce using rule 21
	'mutation'     reduce using rule 21
	'scalar'       reduce using rule 21
	'schema'       reduce using rule 21
	'subscription' reduce using rule 21
	'type'         reduce using rule 21
	'union'        reduce using rule 21
	'"'            reduce using rule 21
	'{'            reduce using rule 21
	'"""'          reduce using rule 21
	%eof           reduce using rule 21


State 13

	typeSystemDefinition -> directiveDefinition .       (rule 10)

	'directive'    reduce using rule 10
	'enum'         reduce using rule 10
	'fragment'     reduce using rule 10
	'interface'    reduce using rule 10
	'input'        reduce using rule 10
	'query'        reduce using rule 10
	'mutation'     reduce using rule 10
	'scalar'       reduce using rule 10
	'schema'       reduce using rule 10
	'subscription' reduce using rule 10
	'type'         reduce using rule 10
	'union'        reduce using rule 10
	'"'            reduce using rule 10
	'{'            reduce using rule 10
	'"""'          reduce using rule 10
	%eof           reduce using rule 10


State 14

	graphqlDefinition -> executableDefinition .         (rule 7)

	'directive'    reduce using rule 7
	'enum'         reduce using rule 7
	'fragment'     reduce using rule 7
	'interface'    reduce using rule 7
	'input'        reduce using rule 7
	'query'        reduce using rule 7
	'mutation'     reduce using rule 7
	'scalar'       reduce using rule 7
	'schema'       reduce using rule 7
	'subscription' reduce using rule 7
	'type'         reduce using rule 7
	'union'        reduce using rule 7
	'"'            reduce using rule 7
	'{'            reduce using rule 7
	'"""'          reduce using rule 7
	%eof           reduce using rule 7


State 15

	executableDefinition -> typedOperationDefinition .    (rule 76)

	'directive'    reduce using rule 76
	'enum'         reduce using rule 76
	'fragment'     reduce using rule 76
	'interface'    reduce using rule 76
	'input'        reduce using rule 76
	'query'        reduce using rule 76
	'mutation'     reduce using rule 76
	'scalar'       reduce using rule 76
	'schema'       reduce using rule 76
	'subscription' reduce using rule 76
	'type'         reduce using rule 76
	'union'        reduce using rule 76
	'"'            reduce using rule 76
	'{'            reduce using rule 76
	'"""'          reduce using rule 76
	%eof           reduce using rule 76


State 16

	executableDefinition -> fragmentDefinition .        (rule 78)

	'directive'    reduce using rule 78
	'enum'         reduce using rule 78
	'fragment'     reduce using rule 78
	'interface'    reduce using rule 78
	'input'        reduce using rule 78
	'query'        reduce using rule 78
	'mutation'     reduce using rule 78
	'scalar'       reduce using rule 78
	'schema'       reduce using rule 78
	'subscription' reduce using rule 78
	'type'         reduce using rule 78
	'union'        reduce using rule 78
	'"'            reduce using rule 78
	'{'            reduce using rule 78
	'"""'          reduce using rule 78
	%eof           reduce using rule 78


State 17

	executableDefinition -> selectionSet .              (rule 77)

	'directive'    reduce using rule 77
	'enum'         reduce using rule 77
	'fragment'     reduce using rule 77
	'interface'    reduce using rule 77
	'input'        reduce using rule 77
	'query'        reduce using rule 77
	'mutation'     reduce using rule 77
	'scalar'       reduce using rule 77
	'schema'       reduce using rule 77
	'subscription' reduce using rule 77
	'type'         reduce using rule 77
	'union'        reduce using rule 77
	'"'            reduce using rule 77
	'{'            reduce using rule 77
	'"""'          reduce using rule 77
	%eof           reduce using rule 77


State 18

	description -> stringValue .                        (rule 146)

	'directive'    reduce using rule 146
	'enum'         reduce using rule 146
	'interface'    reduce using rule 146
	'input'        reduce using rule 146
	'scalar'       reduce using rule 146
	'schema'       reduce using rule 146
	'type'         reduce using rule 146
	'union'        reduce using rule 146
	ident          reduce using rule 146


State 19

	typedOperationDefinition -> operationType . directives selectionSet    (rule 79)
	typedOperationDefinition -> operationType . name directives selectionSet    (rule 80)
	typedOperationDefinition -> operationType . variableDefinitions directives selectionSet    (rule 81)
	typedOperationDefinition -> operationType . name variableDefinitions directives selectionSet    (rule 82)

	'@'            shift, and enter state 58
	'{'            reduce using rule 141
	'('            shift, and enter state 59
	ident          shift, and enter state 29

	name           goto state 53
	variableDefinitionsgoto state 54
	directives     goto state 55
	directives_    goto state 56
	directive      goto state 57

State 20

	schemaDefinition -> description . 'schema' directives '{' rootOperationTypesDefinition '}'    (rule 11)
	scalarTypeDefinition -> description . 'scalar' name directives    (rule 22)
	objectTypeDefinition -> description . 'type' name implementsInterfaces directives fieldsDefinition    (rule 23)
	interfaceTypeDefinition -> description . 'interface' name implementsInterfaces directives fieldsDefinition    (rule 24)
	unionTypeDefinition -> description . 'union' name directives '=' unionMembers    (rule 35)
	unionTypeDefinition -> description . 'union' name directives '=' '|' unionMembers    (rule 36)
	enumTypeDefinition -> description . 'enum' name directives '{' enumValuesDefinition '}'    (rule 39)
	inputObjectTypeDefinition -> description . 'input' name directives inputFieldsDefinition    (rule 43)
	directiveDefinition -> description . 'directive' '@' dir argumentsDefinition optRepeatable 'on' directiveLocations    (rule 44)
	directiveDefinition -> description . 'directive' '@' dir argumentsDefinition optRepeatable 'on' '|' directiveLocations    (rule 45)

	'directive'    shift, and enter state 45
	'enum'         shift, and enter state 46
	'interface'    shift, and enter state 47
	'input'        shift, and enter state 48
	'scalar'       shift, and enter state 49
	'schema'       shift, and enter state 50
	'type'         shift, and enter state 51
	'union'        shift, and enter state 52


State 21

	fragmentDefinition -> 'fragment' . name typeCondition directives selectionSet    (rule 83)

	ident          shift, and enter state 29

	name           goto state 44

State 22

	operationType -> 'query' .                          (rule 121)

	'@'            reduce using rule 121
	':'            reduce using rule 121
	'{'            reduce using rule 121
	'('            reduce using rule 121
	ident          reduce using rule 121


State 23

	operationType -> 'mutation' .                       (rule 122)

	'@'            reduce using rule 122
	':'            reduce using rule 122
	'{'            reduce using rule 122
	'('            reduce using rule 122
	ident          reduce using rule 122


State 24

	operationType -> 'subscription' .                   (rule 123)

	'@'            reduce using rule 123
	':'            reduce using rule 123
	'{'            reduce using rule 123
	'('            reduce using rule 123
	ident          reduce using rule 123


State 25

	stringValue -> '"' . '"'                            (rule 111)
	stringValue -> '"' . string '"'                     (rule 112)

	'"'            shift, and enter state 42
	string         shift, and enter state 43


State 26

	selectionSet -> '{' . selections '}'                (rule 91)

	'...'          shift, and enter state 41
	ident          shift, and enter state 29

	fragmentSpread goto state 34
	inlineFragment goto state 35
	field          goto state 36
	selections     goto state 37
	selection      goto state 38
	aliasAndName   goto state 39
	name           goto state 40

State 27

	stringValue -> '"""' . blockString '"""'            (rule 113)

	blockString    shift, and enter state 33


State 28

	%start_parseName -> name .                          (rule 1)

	%eof           accept


State 29

	name -> ident .                                     (rule 126)

	'directive'    reduce using rule 126
	'enum'         reduce using rule 126
	'fragment'     reduce using rule 126
	'implements'   reduce using rule 126
	'interface'    reduce using rule 126
	'input'        reduce using rule 126
	'query'        reduce using rule 126
	'mutation'     reduce using rule 126
	'null'         reduce using rule 126
	'on'           reduce using rule 126
	'scalar'       reduce using rule 126
	'schema'       reduce using rule 126
	'subscription' reduce using rule 126
	'type'         reduce using rule 126
	'union'        reduce using rule 126
	'@'            reduce using rule 126
	'$'            reduce using rule 126
	'&'            reduce using rule 126
	'!'            reduce using rule 126
	'"'            reduce using rule 126
	':'            reduce using rule 126
	'='            reduce using rule 126
	'|'            reduce using rule 126
	'{'            reduce using rule 126
	'}'            reduce using rule 126
	'['            reduce using rule 126
	']'            reduce using rule 126
	'('            reduce using rule 126
	')'            reduce using rule 126
	'...'          reduce using rule 126
	'"""'          reduce using rule 126
	int            reduce using rule 126
	float          reduce using rule 126
	bool           reduce using rule 126
	ident          reduce using rule 126
	%eof           reduce using rule 126


State 30

	%start_parseGraphQLDocument -> graphqlDocument .    (rule 0)

	%eof           accept


State 31

	graphqlDocument -> graphqlDefinition .              (rule 2)
	graphqlDocument -> graphqlDefinition . graphqlDocument    (rule 3)

	'directive'    reduce using rule 147
	'enum'         reduce using rule 147
	'fragment'     shift, and enter state 21
	'interface'    reduce using rule 147
	'input'        reduce using rule 147
	'query'        shift, and enter state 22
	'mutation'     shift, and enter state 23
	'scalar'       reduce using rule 147
	'schema'       reduce using rule 147
	'subscription' shift, and enter state 24
	'type'         reduce using rule 147
	'union'        reduce using rule 147
	'"'            shift, and enter state 25
	'{'            shift, and enter state 26
	'"""'          shift, and enter state 27
	%eof           reduce using rule 2

	graphqlDocumentgoto state 32
	graphqlDefinitiongoto state 31
	typeSystemDefinitiongoto state 4
	schemaDefinitiongoto state 5
	typeDefinition goto state 6
	scalarTypeDefinitiongoto state 7
	objectTypeDefinitiongoto state 8
	interfaceTypeDefinitiongoto state 9
	unionTypeDefinitiongoto state 10
	enumTypeDefinitiongoto state 11
	inputObjectTypeDefinitiongoto state 12
	directiveDefinitiongoto state 13
	executableDefinitiongoto state 14
	typedOperationDefinitiongoto state 15
	fragmentDefinitiongoto state 16
	selectionSet   goto state 17
	stringValue    goto state 18
	operationType  goto state 19
	description    goto state 20

State 32

	graphqlDocument -> graphqlDefinition graphqlDocument .    (rule 3)

	%eof           reduce using rule 3


State 33

	stringValue -> '"""' blockString . '"""'            (rule 113)

	'"""'          shift, and enter state 90


State 34

	selection -> fragmentSpread .                       (rule 95)

	'}'            reduce using rule 95
	'...'          reduce using rule 95
	ident          reduce using rule 95


State 35

	selection -> inlineFragment .                       (rule 96)

	'}'            reduce using rule 96
	'...'          reduce using rule 96
	ident          reduce using rule 96


State 36

	selection -> field .                                (rule 94)

	'}'            reduce using rule 94
	'...'          reduce using rule 94
	ident          reduce using rule 94


State 37

	selectionSet -> '{' selections . '}'                (rule 91)

	'}'            shift, and enter state 89


State 38

	selections -> selection .                           (rule 92)
	selections -> selection . selections                (rule 93)

	'}'            reduce using rule 92
	'...'          shift, and enter state 41
	ident          shift, and enter state 29

	fragmentSpread goto state 34
	inlineFragment goto state 35
	field          goto state 36
	selections     goto state 88
	selection      goto state 38
	aliasAndName   goto state 39
	name           goto state 40

State 39

	field -> aliasAndName . directives                  (rule 87)
	field -> aliasAndName . arguments directives        (rule 88)
	field -> aliasAndName . arguments directives selectionSet    (rule 89)
	field -> aliasAndName . directives selectionSet     (rule 90)
